2009-11-10  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: vs_join return 0 if
	target address accessible, and non-zero
	code otherwise;

	* libjanus: revision 0.11.2.

2009-10-29  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: vs_group_size return
	group size (0, if not in group);

	* libjanus: revision 0.11.1.

2009-10-22  Petr Ovtchenkov  <ptr@void-ptr.info>

	* vtime.h, vtime.cc: node treated as failed
	when lock ack not received within specified
	timeout [now happens when accept new member
	into group or during flush message
	processing]; VS_LEAVE removed [required actions
	will be	done when fail will be detected;
	in other cases we has no interest for special
	processing];

	* libjanus: revision 0.11.0.

2009-10-15  Petr Ovtchenkov  <ptr@void-ptr.info>

	* Repo: interface and test [may be used as
	sample] for state recovery during join
	to group.
	
	* libjanus: revision 0.10.0.

2009-10-13  Petr Ovtchenkov  <ptr@void-ptr.info>

	* Repo: virtual synchrony lock-related
	issues implemented with node state change;
	out-of-order events go to delayed queue in
	locked state too;
	
	* Repo: announce and interchange by access
	points for group members;

	* libjanus: revision 0.9.0.

2009-09-30  Petr Ovtchenkov  <ptr@void-ptr.info>

	* Repo: join to group implemented via
	concept of 'view'; join done through 'leader'
	with lock 'view' and update 'view [two-stage
	fixation]; 'leader' may be arbitrarily chosen
	by applicant from group members;

	* Repo: virtual time send full timestamp
	instead of 'change', due to I should keep
	special 'sent' time vectors---negative use-case
	was found for previous implementation;
	
	* libjanus: revision 0.8.0.

2009-09-18  Petr Ovtchenkov  <ptr@void-ptr.info>

	* Repo: implement single group concept;
	virtual synchrony events are totally within
	StEM framework (VS event is a StEM event that
	incapsulate Event, possible converted, i.e. event that
	may incapsulte already serialized data);