@@ -1,7 +1,7 @@
-# -*- makefile -*- Time-stamp: <09/11/10 10:14:21 ptr>
+# -*- makefile -*- Time-stamp: <09/11/10 17:11:15 ptr>
 
 LIBNAME = janus
 MAJOR = 0
 MINOR = 11
-PATCH = 2
+PATCH = 3
 SRC_CC = vtime.cc
