@@ -1,5 +1,14 @@
 2009-11-10  Petr Ovtchenkov  <ptr@void-ptr.info>
 
+	* vtime.h, vtime.cc: added send_to_vsg and
+	forward_to_vsg functions, that send/forward
+	event to all current group members, except
+	self; this functions use info about 
+	virtual synchronity group members, but
+	not influence virtual time;
+
+	* libjanus: revision 0.11.3;
+
 	* vtime.h, vtime.cc: vs_join return 0 if
 	target address accessible, and non-zero
 	code otherwise;
